# webscraper_ai

./: .env.example  .gitignore  CLAUDE.md  CODE_CHANGES_REPORT.html  CODE_QUALITY_REPORT.md  CODE_SMELL_REPORT.html  CONTRIBUTING.md  FIXES_APPLIED.md  LICENSE  QUICKSTART.md  README.md  SCRAPING_EXPLAINED.md  SONARCLOUD_SETUP.md  WEBSCRAPER_SUMMARY.html  pyproject.toml  requirements.txt  sonar-project.properties  tmp_facets.txt  tmp_log.txt  tmp_log2.txt
.github/workflows/: sonarcloud.yml
_before_fixes/: COMPARISON_GUIDE.md  requirements.txt
_before_fixes/src/: ai_analyzer.py  config.py  scraper.py  utils.py
data/: README.md
examples/: basic_scraping.py  demo_scraping.py
src/: __init__.py  ai_analyzer.py  config.py  logging_config.py  scraper.py  utils.py
tests/: __init__.py  test_ai_analyzer.py  test_scraper.py  test_utils.py
